--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,9 @@
   "description": "Tiny but perfect jQuery scrollbar plugin",
   "main": [
     "src/perfect-scrollbar.css",
-    "src/perfect-scrollbar.js"
+    "src/perfect-scrollbar.js",
+    "src/jquery.mousewheel.js"
+
   ],
   "license": "MIT",
   "ignore": [
